--- a/KINOv2/KINOv2/Views/Account/Login.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Login.cshtml
@@ -9,78 +9,81 @@
     ViewData["Title"] = "Авторизация";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Локальная учетная запись</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label class="text-info" asp-for="UserName"></label>
-                    <input asp-for="UserName" class="form-control control" />
-                    <span asp-validation-for="UserName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label class="text-info" asp-for="Password"></label>
-                    <input asp-for="Password" class="form-control control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="RememberMe">
-                            <input asp-for="RememberMe" />
-                            @Html.DisplayNameFor(m => m.RememberMe)
-                        </label>
+<div class="container px-0">
+    <div class="row">
+        <h2 class="col-12">@ViewData["Title"]</h2>
+        <div class="col-md-4">
+            <section>
+                <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+                    <h4>Локальная учетная запись</h4>
+                    <hr />
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label class="text-info" asp-for="UserName"></label>
+                        <input asp-for="UserName" class="form-control control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
                     </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn border-orange w-100">Войти</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a class="text-orange" asp-action="ForgotPassword">Восстановить пароль</a>
-                    </p>
-                    <p>
-                        <a class="text-orange" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Нет учетной записи?</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-5 col-12 ml-auto">
-        <section>
-            <h4>Сторонние сервисы</h4>
-            <hr />
-            @{
-                var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
-                if (loginProviders.Count == 0)
-                {
-                    <div>
+                    <div class="form-group">
+                        <label class="text-info" asp-for="Password"></label>
+                        <input asp-for="Password" class="form-control control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="RememberMe">
+                                <input asp-for="RememberMe" />
+                                @Html.DisplayNameFor(m => m.RememberMe)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn border-orange w-100">Войти</button>
+                    </div>
+                    <div class="form-group">
                         <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
+                            <a class="text-orange" asp-action="ForgotPassword">Восстановить пароль</a>
+                        </p>
+                        <p>
+                            <a class="text-orange" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Нет учетной записи?</a>
                         </p>
                     </div>
-                }
-                else
-                {
-                    <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                </form>
+            </section>
+        </div>
+        <div class="col-md-5 col-12 ml-auto">
+            <section>
+                <h4>Сторонние сервисы</h4>
+                <hr />
+                @{
+                    var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
+                    if (loginProviders.Count == 0)
+                    {
                         <div>
-                            <p class="text-center text-md-left">
-                                @foreach (var provider in loginProviders)
-                                {
-                                    <button type="submit" class="btn border-orange w-50" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
-                                }
+                            <p>
+                                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                for details on setting up this ASP.NET application to support logging in via external services.
                             </p>
                         </div>
-                    </form>
+                    }
+                    else
+                    {
+                        <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                            <div>
+                                <p class="text-center text-md-left">
+                                    @foreach (var provider in loginProviders)
+                                    {
+                                        <button type="submit" class="btn border-orange w-50" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
+                                    }
+                                </p>
+                            </div>
+                        </form>
+                    }
                 }
-            }
-        </section>
+            </section>
+        </div>
     </div>
 </div>
+
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
