--- a/KINOv2/KINOv2/Views/Account/Register.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Register.cshtml
@@ -3,36 +3,39 @@
     ViewData["Title"] = "Регистрация";
 }
 
-<h2>@ViewData["Title"]</h2>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-            <h4>Создание новой учетной записи</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label class="text-info" asp-for="Email"></label>
-                <input asp-for="Email" class="form-control control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="text-info" asp-for="UserName"></label>
-                <input asp-for="UserName" class="form-control control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="text-info" asp-for="Password"></label>
-                <input asp-for="Password" class="form-control control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="text-info" asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn border-orange w-100">Зарегистрироваться</button>
-        </form>
+
+<div class="container px-0">
+    <div class="row">
+        <h2 class="col-12">@ViewData["Title"]</h2>
+        <div class="col-md-4">
+            <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+                <h4>Создание новой учетной записи</h4>
+                <hr />
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label class="text-info" asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="text-info" asp-for="UserName"></label>
+                    <input asp-for="UserName" class="form-control control" />
+                    <span asp-validation-for="UserName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="text-info" asp-for="Password"></label>
+                    <input asp-for="Password" class="form-control control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="text-info" asp-for="ConfirmPassword"></label>
+                    <input asp-for="ConfirmPassword" class="form-control control" />
+                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn border-orange w-100">Зарегистрироваться</button>
+            </form>
+        </div>
     </div>
 </div>
 
