--- a/KINOv2/KINOv2/Views/Home/Affiche.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Affiche.cshtml
@@ -1,41 +1,111 @@
 ﻿@using KINOv2.Models.MainModels
 @{
+    List<Film> films = ViewData["Featured"] as List<Film>;
     ViewData["Title"] = "Афиша";
 }
 
-<div class="d-flex flex-column" style="min-height:inherit;">
-    @if (User.IsInRole("Admin"))
-    {
-        <div class="row d-flex justify-content-center justify-content-md-between mb-2">
-            <h1 class="col-10 col-md-4">@ViewData["Title"]</h1>
-            <a class="align-self-center border-orange btn col-10 col-md-3 d-flex justify-content-center mr-md-3" asp-area="" asp-controller="Content" asp-action="FilmManage">Добавить фильм</a>
-        </div>
-    }
-    else
-    {
-        <h1>@ViewData["Title"]</h1>
-    }
 
-<h2>@ViewData["Message"]</h2>
+<div class="container px-0 px-sm-3">
+    <div class="row">
 
 
-<div class="row justify-content-sm-center justify-content-md-start">
-    @foreach (Film film in ViewData["Films"] as IEnumerable<Film>)
-    {
-        <div class="col-9 col-sm-5 col-md-4 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
-            @{
-                <a class="text-orange affiche-film" asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
-                    <div class="image-container"><img class="img-fluid img-fixed" src="@Url.Content("~/images/Posters/" + film.Poster)" /></div>
-                    <div class="h4 text-center text-orange">
-                        @(film.Name)
+
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="col-12">
+                <div class="row d-flex justify-content-center justify-content-md-between mb-2">
+                    <h1 class="col-10 col-md-4">@ViewData["Title"]</h1>
+                    <a class="align-self-center border-orange btn col-10 col-md-3 d-flex justify-content-center mr-md-3" asp-area="" asp-controller="Content" asp-action="FilmManage">Добавить фильм</a>
+                </div>
+            </div>
+        }
+        else
+        {
+            <h1 class="col-12">@ViewData["Title"]</h1>
+        }
+
+        <h2 class="col-12">@ViewData["Message"]</h2>
+
+        <div class="d-md-flex flex-md-row mb-4 col mt-2">
+            <ul class="nav col d-flex justify-content-between d-md-inline-flex align-self-md-start align-items-baseline flex-row flex-nowrap pr-0" data-film-id="">
+                <li class="nav-item session-nav">
+                    <a class="btn border-orange col nav-link text-center session-date selected px-2 px-md-3" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.ToShortDateString()" data-target="sessions">Сегодня @DateTime.Now.Date.ToString("dd.MM")</a>
+                </li>
+                <li class="nav-item dropdown d-md-none text-center">
+                    <a id="session-drop" class="nav-link dropdown-toggle px-2 px-md-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ближайшие дни</a>
+                    <div class="dropdown-menu session-dropdown">
+                        <a class="dropdown-item session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.AddDays(1).ToShortDateString()" data-target="sessions">Завтра @DateTime.Now.Date.AddDays(1).ToString("dd.MM")</a>
+                        <a class="dropdown-item session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.AddDays(2).ToShortDateString()" data-target="sessions">Послезавтра @DateTime.Now.Date.AddDays(2).ToString("dd.MM")</a>
                     </div>
-                </a>
-            }
+                </li>
+                <li class="nav-item session-nav d-none d-md-flex justify-content-center">
+                    <a class="btn border-orange col nav-link session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.AddDays(1).ToShortDateString()" data-target="sessions">Завтра @DateTime.Now.Date.AddDays(1).ToString("dd.MM")</a>
+                </li>
+                <li class="nav-item session-nav d-none d-md-flex justify-content-center">
+                    <a class="btn border-orange col nav-link session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.AddDays(2).ToShortDateString()" data-target="sessions">Послезавтра @DateTime.Now.Date.AddDays(2).ToString("dd.MM")</a>
+                </li>
+                <li class="nav-item session-nav">
+                    <a class="col btn border-orange nav-link date-picker px-2 px-md-3" asp-area="" asp-controller="Home" asp-action="FilmSessions" data-target="sessions">
+                        <div class="">
+                            <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
+                                <input type="hidden" class="form-control datetimepicker-input" data-target="#datetimepicker4" />
+                                <div class="input-group-append mx-auto" data-target="#datetimepicker4" data-toggle="datetimepicker">
+                                    <div class=""><span class="d-none d-md-inline">Выбрать дату</span><i class="fa fa-calendar d-md-none"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
         </div>
-    }
-</div>
 
-<nav class="mt-auto">
-    <page-link page-model=@(ViewData["PageView"] as PageViewModel) page-action="Affiche"></page-link>
-</nav>
+
+        @foreach (var film in films)
+        {
+            <div class="col-12 affiche-film">
+
+                <div class="row">
+                    <div class="col-3 py-3">
+                        <a class="d-inline" asp-area="" asp-action="Film" asp-controller="Home" asp-route-id="@film.LINK">
+                            <img class="img-fluid" src="@Url.Content("~/images/Posters/" + film.Poster)" />
+                        </a>
+                    </div>
+
+                    <div class="col py-2">
+                        <a class="d-inline" asp-area="" asp-action="Film" asp-controller="Home" asp-route-id="@film.LINK">
+                            <h2>@film.Name</h2>
+                        </a>
+                        <p>@film.Genre.Name <span class="age-label d-inline-flex ml-2 align-self-center justify-content-center">@film.AgeLimit.Value</span></p>
+
+                        @{
+                            ViewData["FilmSessions"] = (ViewData["AllFilmSessions"] as Dictionary<string, Dictionary<string, List<Session>>>)[film.Name];
+                        }
+
+                        @await Html.PartialAsync("FilmSessions")
+
+                    </div>
+                </div>
+            </div>
+        }
+
+        @*<div class="row justify-content-sm-center justify-content-md-start">
+            @foreach (Film film in ViewData["Films"] as IEnumerable<Film>)
+            {
+                <div class="col-9 col-sm-5 col-md-4 col-lg-4 col-xl-3 mb-3 mx-auto mx-sm-0 mt-2 mt-md-0">
+                    @{
+                        <a class="text-orange affiche-film" asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
+                            <div class="image-container"><img class="img-fluid img-fixed" src="@Url.Content("~/images/Posters/" + film.Poster)" /></div>
+                            <div class="h4 text-center text-orange">
+                                @(film.Name)
+                            </div>
+                        </a>
+                    }
+                </div>
+            }
+        </div>*@
+
+        @*<nav class="mt-auto">
+            <page-link page-model=@(ViewData["PageView"] as PageViewModel) page-action="Affiche"></page-link>
+        </nav>*@
+    </div>
 </div>
