--- a/KINOv2/KINOv2/Views/Home/Film.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Film.cshtml
@@ -4,7 +4,7 @@
     bool filmRated = (Convert.ToBoolean(ViewData["FilmRated"]));
 }
 
-<div class="film-container">
+<div class="container px-0">
     @if (User.IsInRole("Admin"))
     {
         <div class="row d-flex justify-content-center justify-content-md-end mb-2">
@@ -151,3 +151,5 @@
         </div>
     }
 </div>
+
+
