--- a/KINOv2/KINOv2/Views/Manage/History.cshtml
+++ b/KINOv2/KINOv2/Views/Manage/History.cshtml
@@ -8,8 +8,8 @@
     <h2 class="col-12">История заказов</h2>
     <hr class="w-100 d-none d-sm-none d-md-block ml-3 col-lg-9" />
     <div class="col-lg-10">
-        <table id="history-table" class="table table-hover bg-dark-blue" data-sorting="true">
-            <thead>
+        <table id="history-table" class="table table-hover bg-dark-blue" data-sorting="true" data-paging="true">
+            @*<thead>
                 <tr>
                     <th class="border-top-0" data-breakpoints="xs sm">Зал</th>
                     <th class="border-top-0">Фильм</th>
@@ -31,7 +31,7 @@
                         <td>@order.OrderDate.Value.ToString("dd.MM.yy") @order.OrderDate.Value.ToString("HH:mm")</td>
                     </tr>
                 }
-            </tbody>
+            </tbody>*@
         </table>
     </div>
 </div>
