update 22.07.2018: - включен верхний слайдер на главной - обновлена страница сеансов - список фильмов вынесен в частичное представление

--- a/KINOv2/KINOv2/Views/Account/Login.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
     ViewData["Title"] = "Авторизация";
 }
 
-<div class="container px-0">
+<div class="container px-0 px-sm-3">
     <div class="row">
         <h2 class="col-12">@ViewData["Title"]</h2>
         <div class="col-md-4">
