--- a/KINOv2/KINOv2/Views/Home/Film.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Film.cshtml
@@ -4,7 +4,7 @@
     bool filmRated = (Convert.ToBoolean(ViewData["FilmRated"]));
 }
 
-<div class="container px-0">
+<div class="container px-0 px-sm-3">
     @if (User.IsInRole("Admin"))
     {
         <div class="row d-flex justify-content-center justify-content-md-end mb-2">
