--- a/KINOv2/KINOv2/Views/Home/Support.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Support.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Обратная связь";
 }
 
-<div class="container px-0">
+<div class="container px-0 px-sm-3">
     <div class="row">
         <h1 class="col-12">Обратная связь</h1>
         <div class="col-md-8">
