--- a/KINOv2/KINOv2/Views/Shared/FilmSessions.cshtml
+++ b/KINOv2/KINOv2/Views/Shared/FilmSessions.cshtml
@@ -1,14 +1,14 @@
-﻿<div class="col-12 mb-2">
+﻿<div class="mb-2 film-sessions">
 
     @if (ViewData["FilmSessions"] is null)
     {
-        <div class="text-center text-info my-1 h1 mt-md-5">Сеансы отсутствуют</div>
+        <div class="text-center text-info my-1 mt-md-5 sessions-empty">Сеансы отсутствуют</div>
     }
     else
     {
         if ((ViewData["FilmSessions"] as Dictionary<string, List<Session>>).Where(x => x.Value.Count > 0).Count() == 0)
         {
-            <div class="text-center text-info my-1 h1 mt-md-5">Сеансы отсутствуют</div>            
+            <div class="text-center text-info my-1 mt-md-5 sessions-empty">Сеансы отсутствуют</div>            
         }
         else
         {
@@ -16,8 +16,8 @@
             {
                 if (pair.Value.Count > 0)
                 {
-                    <div class="text-center text-info my-1 mb-2">@pair.Key</div>
-                    <div class="row mb-2 justify-content-center">
+                    <div class="hall-name text-info my-1 mb-2">@pair.Key</div>
+                    <div class="row mb-2">
                         @foreach (var session in pair.Value)
                         {
                             <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToString("HH:mm")</div></a>
