--- a/KINOv2/KINOv2/Views/Account/ForgotPassword.cshtml
+++ b/KINOv2/KINOv2/Views/Account/ForgotPassword.cshtml
@@ -3,20 +3,23 @@
     ViewData["Title"] = "Забыли пароль?";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Укажите ваш E-mail.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ForgotPassword" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label class="text-info" asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn border-orange w-100">Отправить</button>
-        </form>
+<div class="container px-0 px-sm-3">
+    <div class="row">
+        <h2 class="col-12">@ViewData["Title"]</h2>
+        <div class="col-md-4">
+            <h3>Укажите ваш E-mail.</h3>
+            <hr />
+            <form asp-action="ForgotPassword" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label class="text-info" asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn border-orange w-100">Отправить</button>
+            </form>
+        </div>
+        
     </div>
 </div>
 
