--- a/KINOv2/KINOv2/Views/Account/Register.cshtml
+++ b/KINOv2/KINOv2/Views/Account/Register.cshtml
@@ -3,9 +3,7 @@
     ViewData["Title"] = "Регистрация";
 }
 
-
-
-<div class="container px-0">
+<div class="container px-0 px-sm-3">
     <div class="row">
         <h2 class="col-12">@ViewData["Title"]</h2>
         <div class="col-md-4">
