--- a/KINOv2/KINOv2/Views/Content/SessionManage.cshtml
+++ b/KINOv2/KINOv2/Views/Content/SessionManage.cshtml
@@ -3,60 +3,65 @@
     ViewData["Title"] = "Управление сеансами";
 }
 
-<h2>@ViewData["Title"]</h2>
+<div class="container px-0 px-sm-3">
+    <div class="row">
+        <div class="col-12">
+            <h2>@ViewData["Title"]</h2>
 
-<h3>@ViewData["Message"]</h3>
-<hr />
-<div class="row">
-    <form asp-area="" asp-controller="Content" asp-action="SessionManage" method="post" role="form" class="form-horizontal w-100 col-lg-4 offset-lg-1">
-        <div asp-validation-summary="All" class="text-danger"></div>
-        @if (Model is null)
-        {
-            if (!(ViewBag.Film is null))
+            <h3>@ViewData["Message"]</h3>
+            <hr />
+        </div>
+        <form asp-area="" asp-controller="Content" asp-action="SessionManage" method="post" role="form" class="form-horizontal w-100 col-lg-4 offset-lg-1">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            @if (Model is null)
             {
-                <input asp-for="FilmLINK" value="@ViewBag.Film.LINK" type="hidden" />
-                <div class="form-group">
-                    <label class="text-info" asp-for="FilmLINK"></label>
-                    <input class="form-control control" value="@ViewBag.Film.Name" disabled style="background-color:rgba(133, 136, 146, 0.6); cursor:not-allowed;" />
-                </div>
+                if (!(ViewBag.Film is null))
+                {
+                    <input asp-for="FilmLINK" value="@ViewBag.Film.LINK" type="hidden" />
+                    <div class="form-group">
+                        <label class="text-info" asp-for="FilmLINK"></label>
+                        <input class="form-control control" value="@ViewBag.Film.Name" disabled style="background-color:rgba(133, 136, 146, 0.6); cursor:not-allowed;" />
+                    </div>
+                }
+                else
+                {
+                    <div class="form-group">
+                        <label class="text-info" asp-for="FilmLINK"></label>
+                        <select asp-for="FilmLINK" asp-items="ViewBag.Films" class="form-control control"></select>
+                    </div>
+                }
             }
             else
             {
+                <input asp-for="FilmLINK" type="hidden" />
                 <div class="form-group">
                     <label class="text-info" asp-for="FilmLINK"></label>
-                    <select asp-for="FilmLINK" asp-items="ViewBag.Films" class="form-control control"></select>
+                    <input asp-for="Film.Name" class="form-control control" disabled style="background-color:rgba(133, 136, 146, 0.6); cursor:not-allowed;" />
                 </div>
             }
-        }
-        else
-        {
-            <input asp-for="FilmLINK" type="hidden" />
             <div class="form-group">
-                <label class="text-info" asp-for="FilmLINK"></label>
-                <input asp-for="Film.Name" class="form-control control" disabled style="background-color:rgba(133, 136, 146, 0.6); cursor:not-allowed;" />
+                <label class="text-info" asp-for="SessionTime"></label>
+                <input asp-for="SessionTime" type="datetime-local" class="form-control control" />
             </div>
-        }
-        <div class="form-group">
-            <label class="text-info" asp-for="SessionTime"></label>
-            <input asp-for="SessionTime" type="datetime-local" class="form-control control" />
-        </div>
-        <div class="form-group">
-            <label class="text-info" asp-for="HallLINK"></label>
-            <select asp-for="HallLINK" asp-items="ViewBag.Halls" class="form-control control"></select>
-        </div>
-        <div class="form-group">
-            <label class="text-info" asp-for="Cost"></label>
-            <input asp-for="Cost" type="number" class="form-control control" />
-        </div>
+            <div class="form-group">
+                <label class="text-info" asp-for="HallLINK"></label>
+                <select asp-for="HallLINK" asp-items="ViewBag.Halls" class="form-control control"></select>
+            </div>
+            <div class="form-group">
+                <label class="text-info" asp-for="Cost"></label>
+                <input asp-for="Cost" type="number" class="form-control control" />
+            </div>
 
-        @if (Model is null)
-        {
-            <button type="submit" class="btn border-orange w-100 mt-2">Сохранить</button>
-        }
-        else
-        {
-            <input asp-for="LINK" type="hidden" />
-            <button type="submit" class="btn border-orange w-100 mt-2">Обновить</button>
-        }
-    </form>
+            @if (Model is null)
+            {
+                <button type="submit" class="btn border-orange w-100 mt-2">Сохранить</button>
+            }
+            else
+            {
+                <input asp-for="LINK" type="hidden" />
+                <button type="submit" class="btn border-orange w-100 mt-2">Обновить</button>
+            }
+        </form>
+    </div>
 </div>
+
