--- a/KINOv2/KINOv2/Views/Home/Index.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Index.cshtml
@@ -1,25 +1,28 @@
-﻿@{
-    List<Film> films = ViewData["Featured"] as List<Film>;
+﻿@model IEnumerable<Film>
+@{
     List<News> news = ViewData["News"] as List<News>;
 
     ViewData["Title"] = "Главная страница";
 }
-<div class="row position-relative mb-4">
+<div class="row position-relative mb-2 mb-md-4">
     <div class="swiper-container swiper-container-main">
         <div class="swiper-wrapper">
-            @for (int i = 0; i < 3; i++)
+            @foreach (var film in Model)
             {
-                <div class="swiper-slide for-12 px-0 swiper-slide-main position-relative">
-                    <a asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="/">
-                        <img class="img-fluid w-100" src="@Url.Content("~/images/News/Preview/hobbit.jpg")" />
-                        <div class="w-100 h-100 shade"></div>
-                        <div class="container">
-                            <div class="row">
-                                <h2 class="col-12">Хоббит: пустош Смауга</h2>
+                if (film.InMainSlider && film.MainSliderPoster != "")
+                {
+                    <div class="swiper-slide for-12 px-0 swiper-slide-main position-relative">
+                        <a asp-area="" asp-controller="Home" asp-action="Film" asp-route-id="@film.LINK">
+                            <img class="img-fluid w-100" src="@Url.Content("~/images/Posters/MainSliders/" + film.MainSliderPoster)" />
+                            <div class="w-100 h-100 shade"></div>
+                            <div class="container">
+                                <div class="row">
+                                    <h2 class="col-12 d-none d-md-block">@film.Name</h2>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </div>
+                }
             }
         </div>
         <div class="swiper-button-next swiper-main-btn-next d-flex justify-content-center align-items-center"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
@@ -32,36 +35,12 @@
         <div class="col-12 mt-3 mb-4 d-flex align-items-center justify-content-between">
             <h1>Сегодня в кино</h1><span class="h2">Скоро</span>
         </div>
-        @foreach (var film in films)
-        {
-            <div class="col-12 affiche-film">
+        
+        @await Html.PartialAsync("FilmList", Model)
 
-                <div class="row">
-                    <div class="col-3 py-3">
-                        <a class="d-inline" asp-area="" asp-action="Film" asp-controller="Home" asp-route-id="@film.LINK">
-                            <img class="img-fluid" src="@Url.Content("~/images/Posters/" + film.Poster)" />
-                        </a>
-                    </div>
-
-                    <div class="col py-2">
-                        <a class="d-inline" asp-area="" asp-action="Film" asp-controller="Home" asp-route-id="@film.LINK">
-                            <h2>@film.Name</h2>
-                        </a>
-                        <p>@film.Genre.Name <span class="age-label d-inline-flex ml-2 align-self-center justify-content-center">@film.AgeLimit.Value</span></p>
-
-                        @{
-                            ViewData["FilmSessions"] = (ViewData["AllFilmSessions"] as Dictionary<string, Dictionary<string, List<Session>>>)[film.Name];
-                        }
-
-                        @await Html.PartialAsync("FilmSessions")
-
-                    </div>
-                </div>
-            </div>
-        }
     </section>
 
-    <section class="row px-3">
+    <section class="row px-3 news-section">
         <h2 class="col-12 px-0 h1 mt-3 mb-4">Новости кинотеатра</h2>
         @foreach (var item in news)
         {
