--- a/KINOv2/KINOv2/wwwroot/css/styles.scss
+++ b/KINOv2/KINOv2/wwwroot/css/styles.scss
@@ -7,7 +7,6 @@
     }
 
     h2 {
-        bottom: 60px;
         position: absolute;
         color: white;
     }
@@ -19,19 +18,6 @@
                 text-decoration: none;
                 color: inherit;
             }
-            // &::after {
-            //     content: "";
-            //     top: 0;
-            //     left: 0;
-            //     width: 100%;
-            //     height: 100%;
-            //     //z-index: 1;
-            //     position: absolute;
-            //     background: url(../images/Posters/slider-fade.png) 0 100%;
-            //     background-size: 5px 140px;
-            //     background-repeat: repeat-x;
-            //     opacity: 1;
-            // }
 
             .shade {
                 background: linear-gradient(transparent 65%, black );
@@ -53,6 +39,9 @@
 
         &:hover {
             background-color: rgba($color: #000000, $alpha: .2); 
+        }
+        &:focus {
+            outline: none;
         }
 
     }
@@ -113,27 +102,11 @@
         .news-image{
             position:relative;
             overflow:hidden;
-        
-            // img {
-            //     //position: absolute;
-            //     // max-width: 300%;
-            //     // max-height: 300%;
-            //     // max-width: 150%;
-            //     // max-height: 150%;
-            //     // top: 0;
-            //     // left: 0;
-            //     width: 100%;
-            //     max-height: $width /2;
-            //     // top: 50%;
-            //     // left: 50%;
-            //     // transform: translateX(-50%) translateY(-50%);
-            // }
-                width: 100%;
-                padding-bottom: 100%;
-                //background: url(../images/Posters/hobbit.jpg);
-                background-size: cover;
-                background-position: center;
-                transition: transform .2s linear;
+            width: 100%;
+            padding-bottom: 100%;
+            background-size: cover;
+            background-position: center;
+            transition: transform .2s linear;
         }
 
         .shade {
@@ -218,21 +191,16 @@
     a {
         &:hover {
             text-decoration: none;
-        }
-
-        .fa-instagram {
-            &:hover {
+            .fa-instagram {
                 color: linear-gradient(#8a3ab9, #4c68d7, #cd486b,#bc2a8d, #fbad50, #fccc63);
                 &:before {
                     background: linear-gradient(200deg, #8a3ab9, #4c68d7, #cd486b,#bc2a8d, #fbad50, #fccc63);//-webkit-gradient(linear, right top, left bottom, #8a3ab9 40%, #4c68d7 30%);
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
                 }
+
             }
-        }
-    
-        .fa-vk {
-            &:hover {
+            .fa-vk {
                 color:  #4c75a3
             }
         }
@@ -247,24 +215,241 @@ footer {
                 color: #f6a21c;
             }
         }
-    }
 
-    .fa-instagram {
-        &:hover {
-            color: linear-gradient(#8a3ab9, #4c68d7, #cd486b,#bc2a8d, #fbad50, #fccc63);
-            &:before {
-                background: linear-gradient(200deg, #8a3ab9, #4c68d7, #cd486b,#bc2a8d, #fbad50, #fccc63);//-webkit-gradient(linear, right top, left bottom, #8a3ab9 40%, #4c68d7 30%);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
+        a[target="_blank"] {
+            &:hover {
+                .fa-instagram {
+                    color: linear-gradient(#8a3ab9, #4c68d7, #cd486b,#bc2a8d, #fbad50, #fccc63);
+                    &:before {
+                        background: linear-gradient(200deg, #8a3ab9, #4c68d7, #cd486b,#bc2a8d, #fbad50, #fccc63);//-webkit-gradient(linear, right top, left bottom, #8a3ab9 40%, #4c68d7 30%);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                }
+            
+                .fa-vk {
+                    color:  #4c75a3;
+                }
+            }
+        }
+    }
+}
+
+
+@media(max-width: 575px){
+    .main-affiche {
+
+        h1 {
+            font-size: 30px;
+        }
+
+        span.h2 {
+            font-size: 24px;
+        }
+
+        .affiche-film {
+            h2 {
+                font-size: 18px;
+            }
+
+            p {
+                font-size: 12px;
+                position: relative;
+
+                .age-label {
+                    width: 28px;
+                    height: 28px;
+                    padding-top: 3px;
+                    font-size: 11px;
+                }
+            }
+
+            .film-sessions {
+                .hall-name {
+                    font-size: 14px;
+                }
+
+                .session-button {
+                    font-size: 14px;
+                    height: 1.7rem;
+                }
+
+                .sessions-empty {
+                    font-size: 16px;
+                }
             }
         }
     }
 
-    .fa-vk {
-        &:hover {
-            color:  #4c75a3
+    .news-section {
+        h2 {
+            font-size: 30px;
         }
     }
 
+    footer {
+        .policy {
+            font-size: 12px;
+        }
+    }
+}
+
+@media(min-width: 576px){
+    .main-affiche {
+
+        h1 {
+            font-size: 34px;
+        }
+
+        span.h2 {
+            font-size: 26px;
+        }
+
+        .affiche-film {
+            h2 {
+                font-size: 20px;
+            }
+
+            p {
+                font-size: 14px;
+                position: relative;
+
+                .age-label {
+                    width: 30px;
+                    height: 30px;
+                    padding-top: 5px;
+                    font-size: 12px;
+                }
+            }
+
+            .film-sessions {
+                .hall-name {
+                    font-size: 16px;
+                }
+
+                .session-button {
+                    font-size: 14px;
+                    height: 1.7rem;
+                }
+
+                .sessions-empty {
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+
+    .news-section {
+        h2 {
+            font-size: 34px;
+        }
+    }
+    
+    footer {
+        .policy {
+            font-size: 12px;
+        }
+    }
+}
+
+@media(min-width: 768px){
+    .swiper-container-main {
+        h2 {
+            bottom: 30px;
+        }
+    }
+
+    .main-affiche {
+
+        h1 {
+            font-size: 40px;
+        }
+
+        span.h2 {
+            font-size: 32px;
+        }
+
+        .affiche-film {
+            h2 {
+                font-size: 26px;
+            }
+
+            p {
+                font-size: 16px;
+                position: relative;
+
+                .age-label {
+                    width: 35px;
+                    height: 35px;
+                    padding-top: 7px;
+                    font-size: 14px;
+                }
+            }
+
+            .film-sessions {
+                .hall-name {
+                    font-size: 18px;
+                }
+
+                .session-button {
+                    font-size: 16px;
+                    height: 1.9rem;
+                }
+
+                .sessions-empty {
+                    font-size: 24px;
+                }
+            }
+        }
+    }
+
+    .news-section {
+        h2 {
+            font-size: 40px;
+        }
+    }
+    
+    footer {
+        .policy {
+            font-size: 14px;
+        }
+    }
+
+}
+
+@media(min-width: 992px){
+
+    .swiper-container-main {
+        h2 {
+            bottom: 50px;
+            font-size: 44px;
+        }
+    }
+
+    .main-affiche {
+        .affiche-film {
+            h2 {
+                font-size: 30px;
+            }
+
+            p {
+                font-size: 18px;
+                position: relative;
+            }
+
+            .film-sessions {
+                .hall-name {
+                    font-size: 20px;
+                }
+
+                .sessions-empty {
+                    font-size: 26px;
+                }
+            }
+        }
+    }
+}
+
+@media(min-width: 1200px){
 
 }
