--- a/KINOv2/KINOv2/Views/Home/Affiche.cshtml
+++ b/KINOv2/KINOv2/Views/Home/Affiche.cshtml
@@ -25,25 +25,25 @@
         <h2 class="col-12">@ViewData["Message"]</h2>
 
         <div class="d-md-flex flex-md-row mb-4 col mt-2">
-            <ul class="nav col d-flex justify-content-between d-md-inline-flex align-self-md-start align-items-baseline flex-row flex-nowrap pr-0" data-film-id="">
+            <ul class="nav col d-flex justify-content-between d-md-inline-flex align-self-md-start align-items-baseline flex-row flex-nowrap pr-0">
                 <li class="nav-item session-nav">
-                    <a class="btn border-orange col nav-link text-center session-date selected px-2 px-md-3" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.ToShortDateString()" data-target="sessions">Сегодня @DateTime.Now.Date.ToString("dd.MM")</a>
+                    <a class="btn border-orange col nav-link text-center session-date selected px-2 px-md-3" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.ToShortDateString()" data-target="filmlist">Сегодня @DateTime.Now.Date.ToString("dd.MM")</a>
                 </li>
                 <li class="nav-item dropdown d-md-none text-center">
                     <a id="session-drop" class="nav-link dropdown-toggle px-2 px-md-3" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ближайшие дни</a>
                     <div class="dropdown-menu session-dropdown">
-                        <a class="dropdown-item session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.AddDays(1).ToShortDateString()" data-target="sessions">Завтра @DateTime.Now.Date.AddDays(1).ToString("dd.MM")</a>
-                        <a class="dropdown-item session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.AddDays(2).ToShortDateString()" data-target="sessions">Послезавтра @DateTime.Now.Date.AddDays(2).ToString("dd.MM")</a>
+                        <a class="dropdown-item session-date" asp-area="" asp-controller="Home" asp-action="FilmList" asp-route-date="@DateTime.Now.Date.AddDays(1).ToShortDateString()" data-target="filmlist">Завтра @DateTime.Now.Date.AddDays(1).ToString("dd.MM")</a>
+                        <a class="dropdown-item session-date" asp-area="" asp-controller="Home" asp-action="FilmList" asp-route-date="@DateTime.Now.Date.AddDays(2).ToShortDateString()" data-target="filmlist">Послезавтра @DateTime.Now.Date.AddDays(2).ToString("dd.MM")</a>
                     </div>
                 </li>
                 <li class="nav-item session-nav d-none d-md-flex justify-content-center">
-                    <a class="btn border-orange col nav-link session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.AddDays(1).ToShortDateString()" data-target="sessions">Завтра @DateTime.Now.Date.AddDays(1).ToString("dd.MM")</a>
+                    <a class="btn border-orange col nav-link session-date" asp-area="" asp-controller="Home" asp-action="FilmList" asp-route-date="@DateTime.Now.Date.AddDays(1).ToShortDateString()" data-target="filmlist">Завтра @DateTime.Now.Date.AddDays(1).ToString("dd.MM")</a>
                 </li>
                 <li class="nav-item session-nav d-none d-md-flex justify-content-center">
-                    <a class="btn border-orange col nav-link session-date" asp-area="" asp-controller="Home" asp-action="FilmSessions" asp-route-date="@DateTime.Now.Date.AddDays(2).ToShortDateString()" data-target="sessions">Послезавтра @DateTime.Now.Date.AddDays(2).ToString("dd.MM")</a>
+                    <a class="btn border-orange col nav-link session-date" asp-area="" asp-controller="Home" asp-action="FilmList" asp-route-date="@DateTime.Now.Date.AddDays(2).ToShortDateString()" data-target="filmlist">Послезавтра @DateTime.Now.Date.AddDays(2).ToString("dd.MM")</a>
                 </li>
                 <li class="nav-item session-nav">
-                    <a class="col btn border-orange nav-link date-picker px-2 px-md-3" asp-area="" asp-controller="Home" asp-action="FilmSessions" data-target="sessions">
+                    <a class="col btn border-orange nav-link date-picker px-2 px-md-3" asp-area="" asp-controller="Home" asp-action="FilmList" data-target="filmlist">
                         <div class="">
                             <div class="input-group date" id="datetimepicker4" data-target-input="nearest">
                                 <input type="hidden" class="form-control datetimepicker-input" data-target="#datetimepicker4" />
@@ -56,8 +56,8 @@
                 </li>
             </ul>
         </div>
-
-        @await Html.PartialAsync("FilmList", Model)
-
+        <div id="filmlist">
+            @await Html.PartialAsync("FilmList", Model)
+        </div>
     </div>
 </div>
