--- a/KINOv2/KINOv2/Views/Shared/FilmList.cshtml
+++ b/KINOv2/KINOv2/Views/Shared/FilmList.cshtml
@@ -1,5 +1,12 @@
 ﻿@model IEnumerable<Film>
 
+@if(Model.Count() == 0)
+{
+    <div class="col-12">
+        <h2 class="text-info">Фильмы отсутствуют</h2>
+    </div>
+}
+
 @foreach (var film in Model)
 {
     <div class="col-12 affiche-film mb-3">
