--- a/KINOv2/KINOv2/Views/Shared/FilmSessions.cshtml
+++ b/KINOv2/KINOv2/Views/Shared/FilmSessions.cshtml
@@ -20,7 +20,7 @@
                     <div class="row mb-2">
                         @foreach (var session in pair.Value)
                         {
-                            <a class="col-4 col-md-3 col-lg-2 session-link" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToString("HH:mm")</div></a>
+                            <a class="col-4 col-md-3 col-lg-2 session-link @(session.SessionTime < DateTime.Now ? "disabled" : "")" asp-controller="Home" asp-action="Sessions" asp-route-id="@session.LINK"><div class="session-button">@session.SessionTime.ToString("HH:mm")</div></a>
                         }
                     </div>
                 }
